--- a/Project8/Project8.vcxproj
+++ b/Project8/Project8.vcxproj
@@ -139,11 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="geometry.cpp" />
+    <ClCompile Include="our_gl.cpp" />
     <ClCompile Include="tgaimage.cpp" />
-    <ClCompile Include="源.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="model.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="our_gl.h" />
     <ClInclude Include="tgaimage.h" />
     <ClInclude Include="model.h" />
     <ClInclude Include="geometry.h" />
